--- a/classes/bard.org
+++ b/classes/bard.org
@@ -15,27 +15,28 @@ Support the rest of the party using your talents, or your "talents". Uses unique
 
 To begin playing a Bard, first choose a subclass: [[[id:6a8efa65-451d-4eac-a069-84661a0c69ab][Actor]], [[id:067059f6-be3d-4994-86ca-d7d33a291a79][Muse]], [[id:05331b42-b242-4866-a6e6-df9cdad306e7][Craftsman]]]. These subclasses give you special traits that increase in power as you get stronger, and a few distinct advantages right out the gate. Your character also gains 1 talisman (consult with DM to learn what you get). Be sure you apply your level 1 bonuses from your subclass.
 
-_Spell attack bonus_: PROF + INT
-_Initial Health_: Roll 1d6 and add it to your base HP
+- _Spell attack bonus_: PROF + INT
+- _Initial Health_: Roll 1d6 and add it to your base HP. This is your Hit Die (HD). You will add the amount you roll to your base health every time you level up.
+
 * Level-up
-1. Gain Life Force Manipulation. At any time, you may use your turn to deal 1d6 decay damage to an enemy or heal an ally for 1d6. This can only be used in combat, but you can use it once after combat to heal if necessary.
-2. Gain a subclass ability. Gain 1d6 health.
-3. Your Intelligence and Wisdom scores both increase by 1. Gain a subclass ability.
-4. Gain Health Transfer. Twice per combat, you may transfer up to 10 health from yourself to an ally. Gain 2d6 health.
-5. Your Charisma is increased by +1. Gain 1d6 health.
+1. Gain _*Life Force Manipulation*_. At any time, you may use your turn to deal 1d6 decay damage to an enemy or heal an ally for 1d6. This can only be used in combat, but you can use it once after combat to heal if necessary. Gain one subclass ability.
+2. Gain a subclass ability.
+3. Your Intelligence and Wisdom scores both increase by 1.
+4. Gain _*Health Transfer*_. Twice per combat, you may transfer up to 10 health from yourself to an ally.
+5. Your Charisma is increased by +1. Gain one subclass ability.
 6. Life Force Manipulation’s strength increases to 1d10.
-7. Gain Transmutation. Learn about one of the following damage types of your choosing (Ice, Fire, Radiance, Energy, Force, Psychic). Once per round of combat, during an ally’s turn, you can change their damage dealt into damage of this type and add an additional 1d6 of this damage type. Gain 1d6 health.
+7. Gain _*Transmutation*_. Learn about one of the following damage types of your choosing (Ice, Fire, Radiance, Energy, Force, Psychic). Once per round of combat, during an ally’s turn, you can change their damage dealt into damage of this type and add an additional 1d6 of this damage type.
 8. Your Strength and Constitution scores both increase by 1.
-9. Gain Bard Buff. Once per combat, grant one of your allies one of the bard buffs for the rest of combat (see subclasses for a list).
-10. Gain a subclass ability. Gain 1d6 health.
-11. Life Force Manipulation’s strength increases to 2d8.
-12. Health Transfer’s strength increases to 20 health. Gain 1d6 health. Gain a subclass ability.
+9. Gain a subclass ability.
+10. Gain _*Bard Buff*_. Once per combat, grant one of your allies the ability to use a bard action for the rest of combat. You can choose from your learned bard actions.
+11. _*Life Force Manipulation*_’s strength increases to 2d8. Gain a subclass ability
+12. Health Transfer’s strength increases to 20 health.
 13. Learn Upgraded Transmutation - gain one more damage type, and when applying transmutation, the damage increases to 2d6.
 14. Gain +1 of Any. Gain 1d6 health.
 15. Subclass Feature.
 16. You may now use Bard Buff twice per combat. Gain 1d6 health.
 17. Life Force Manipulation’s strength increases to 2d12.
 18. Gain +1 of Any and an additional +1 of Any (must be a different Ability Score than the first +1). Gain 1d6 health.
-19. Subclass Feature.
+19. Gain a subclass ability.
 20. Multiclass
 -----
