--- a/classes/prophet.org
+++ b/classes/prophet.org
@@ -11,3 +11,5 @@
 #+END_CENTER
 -----
 Chosen vessel of a particular God. Prophets do not know which God they channel at the beginning of the game. The prophet has a primary mission of discovering which God they are aligned to by learning about the religious system of the world.
+
+- _Initial Health_: Roll a 1d6 and add it to your base HP. This is your Hit Die (HD). You will add the amount your roll to your base health every time your level up.
