--- a/classes/sorcerer.org
+++ b/classes/sorcerer.org
@@ -21,24 +21,24 @@ Spells are cast using
 - _Spell Save DC_: 8 + WIS + PROF
 
 * Proficiencies
-| Armor | Weapons       | Tools |
-|-------+---------------+-------|
-|       | Staffs        |       |
-|       | Daggers       |       |
-|       | Quarterstaffs |       |
+| Armor | Weapons       | Tools          |
+|-------+---------------+----------------|
+|       | Staffs        | Conjuring Kits |
+|       | Daggers       |                |
+|       | Quarterstaffs |                |
 * Level-up guide
 1. Pick one generic spell, one sorcerer spell, and one sorcery (consult your subclass page). You begin the game with three level one spell slots (Total: 3 lvl1, 0 lvl2, 0 lvl3, 0 lvl4). All three reset on every long rest. Spell slots are only used up during combat encounters.
-2. Add one generic spell and one sorcerer spell to your spell list. Roll 1d6 and add to your health.
-3. Add one sorcery and 1d6 health. Add one level one spell slot (Total: 4, 0, 0, 0).
-4. Gain Recast Recharge. Add 1d6 health.
+2. Add one generic spell and one sorcerer spell to your spell list.
+3. Add one sorcery. Add one level one spell slot (Total: 4, 0, 0, 0).
+4. Gain Recast Recharge.
 5. You are now able to learn level two spells. Add +1 WIS and +1 of Any, as well as one level two spell slot. (Total: 4, 1, 0, 0).
-6. Add one generic spell, one sorcerer spell, and 1d6 health.
-7. Add one sorcery, one level two spell slot, and 1d6 health (Total: 4, 2).
-8. Add one sorcerer trait and 1d6 health.
+6. Add one generic spell, and one sorcerer spell.
+7. Add one sorcery, and one level two spell slot (Total: 4, 2).
+8. Add +1 to INT and +1 to WIS.
 9. Add +1 of Any.
 10. Become an Archsorcerer: Evolve, Mutate, or Ascend.
-11. You are now able to learn level three spells. Add two generic spells, one level three spell slot, and 1d6 health. (Total: 4, 2, 1, 0)
-12. Add one sorcerer spell and 1d6 health
+11. You are now able to learn level three spells. Add two generic spells, one level three spell slot, and 1d6 health. (Total: 4, 2, 1, 0).
+12. Add one sorcerer spell and 1d6 health.
 13. Add one sorcery.
 14. Add +1 of Any, 1d6 health, and one level two spell slot. (Total: 4, 3, 1, 0)
 15. Add one sorcerer trait, one level three spell slot, and 1d6 health (Total: 4, 3, 2, 0).
