--- a/dnd.org
+++ b/dnd.org
@@ -11,7 +11,7 @@
 #+begin_menu
 [[file:character-sheet.pdf][Blank Character Sheet]]
 
-World Overview
+[[id:86991f3b-d12e-47a4-9410-535986210ee8][World Overview]]
 
 [[id:f1eac65b-54c1-49f8-b117-e7d46f40b82c][Player Overview]]
 
