--- a/classes/subclasses/psychic_sorcerer.org
+++ b/classes/subclasses/psychic_sorcerer.org
@@ -11,14 +11,14 @@
 [[[id:7d419730-2064-41f9-80ee-f24ed9b01ac7][Main Menu]]] [[[id:69ef1740-156a-4e42-9493-49ec80a4ac26][Classes]]] [[[id:f2323133-e17d-4cff-86db-415b72e6d42e][Sorcerer]]]
 #+END_CENTER
 -----
-Something in your mind has unhinged, and in an absolute fluke this has unlocked a hidden magic that lies within the minds and hearts of all beings.
+Something in your mind has unhinged, and in an absolute fluke this has unlocked a potent hidden magic that lies within the minds and hearts of all beings.
 
 * Sorcerer Traits
-- /Gift of Gab/: For one reason or another, you're a enthralling speaker. Your persuasion attempts have advantage
+- /Gift of Gab/: For one reason or another, you're a enthralling speaker. Your persuasion attempts have advantage on unintelligent creatures.
 - /Schizoid/:
 * Level 1 Sorceries
 - _*Migraine*_: Roll to hit. On hit, give a target a headache for three turns. Deal 1d8 madness damage on the first turn, 1d6 psychic damage, and 1d4 psychic damage.
-- _*Cursed Knowledge*_: Allow a party member to glimpse the insanity. Give this member +4 insight for the whole turn.
+- _*Cursed Knowledge*_: Allow a party member to glimpse the beyond. Give this member +4 insight for the whole turn.
 - _*Discordant Whisper*_: You whisper a discordant melody that only one creature of your choice within range can hear, wracking it with terrible pain. The target must make a Wisdom saving throw. On a failed save, it takes 3d6 psychic damage and must immediately use its reaction, if available, to move as far as its speed allows away from you. The creature doesn’t move into obviously dangerous ground, such as a fire or a pit. On a successful save, the target takes half as much damage and doesn’t have to move away. A deafened creature automatically succeeds on the save.
 * Level 2 (5+) Sorceries
 - _*Jedi Mind Trick*_: You know the rules. This automatically succeeds on every creature with less than 13 INT. Creatures at or above 13 INT must roll a INT saving throw. /The extent of this ability is up to DM discretion/
