--- a/classes/druid.org
+++ b/classes/druid.org
@@ -1,12 +1,14 @@
 :PROPERTIES:
 :ID:        8bb9a08a-9770-4231-a002-ad7dcf83e4d8
 :END:
+:DRUID:
 #+title:    Druid
 #+filetags: :DND:druid:
 #+author:   zfoteff
 #+date:     [2023-07-12 Wed]
 #+summary:  Druid class summary
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="../static/stylesheets/subclass-style.css" />
+:END:
 #+BEGIN_CENTER
 [[[id:7d419730-2064-41f9-80ee-f24ed9b01ac7][Main Menu]]] [[[id:69ef1740-156a-4e42-9493-49ec80a4ac26][Classes]]]
 #+END_CENTER
