--- a/classes/sorcerer.org
+++ b/classes/sorcerer.org
@@ -1,12 +1,14 @@
 :PROPERTIES:
 :ID:       f2323133-e17d-4cff-86db-415b72e6d42e
 :END:
+:SORCERER:
 #+title:    Sorcerer
 #+filetags: :DND:sorcerer:
 #+author:   zfoteff
 #+date:     [2023-07-15 Sat]
 #+summary:  Sorcerer class description
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="../static/stylesheets/subclass-style.css" />
+:END:
 #+BEGIN_CENTER
 [[[id:7d419730-2064-41f9-80ee-f24ed9b01ac7][Main Menu]]] [[[id:69ef1740-156a-4e42-9493-49ec80a4ac26][Classes]]]
 #+END_CENTER
@@ -15,7 +17,7 @@ Manipulate the world around you in a manner of your choosing with latent powers 
 
 To begin playing as a Sorcerer, first choose a sorcery: [[[id:ca360c77-3d1d-43f3-9b6b-e65bb2b1f686][Order]], [[id:8cf16f81-68be-4205-9ff9-1c803443f6bc][Chaos]], [[id:569f7d4d-5744-49e4-ac0d-bebbd1795992][Psychic]]]. Each sorcery comes with some special abilities as you get stronger, and a few distinct advantages right off the jump. All sorcerers can learn generic spells in the [[id:49c66431-d9c7-4213-ae29-b62365fd32d4][spell index]], generic sorceries, and sorcery spells matching their chosen sorcery type. Make sure to review the Magic Guide to get an understanding of the magic system.
 
-Spells are cast using
+Spells are cast using WIS + PROF
 
 - _Initial Health_: Roll a 1d6 and add it to your base HP. This is your Hit Die (HD). You will add the amount your roll to your base health every time your level up.
 - _Spell Save DC_: 8 + WIS + PROF
@@ -27,7 +29,7 @@ Spells are cast using
 |       | Daggers       |                |
 |       | Quarterstaffs |                |
 * Level-up guide
-1. Pick one generic spell, one sorcerer spell, and one sorcery (consult your subclass page). You begin the game with three level one spell slots (Total: 3 lvl1, 0 lvl2, 0 lvl3, 0 lvl4). All three reset on every long rest. Spell slots are only used up during combat encounters.
+1. Pick one generic spell, one sorcerer spell, and one sorcery trait (consult your subclass page). You begin the game with three level one spell slots (Total: 3 lvl1, 0 lvl2, 0 lvl3, 0 lvl4). All three reset on every long rest. Spell slots are only used up during combat encounters.
 2. Add one generic spell and one sorcerer spell to your spell list.
 3. Add one sorcery. Add one level one spell slot (Total: 4, 0, 0, 0).
 4. Gain Recast Recharge.
@@ -47,3 +49,4 @@ Spells are cast using
 18. Add one sorcerer spell and 1d6 health.
 19. Add one sorcery and 1d6 health. Become a Transcendent Archsorcerer.
 20. Multiclass
+* Footnotes
